# synthwaveOpenGL

./: CMakeLists.txt  README.md  main.cpp  perlin.h  render.cpp  render.h
